<resources>
    <string name="app_name">Eat It Server</string>

    <string name="eat_it">EAT IT</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_category">Categories</string>
    <string name="menu_food">Food</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_message">Please fill information \n Admin will accept your account late</string>
    <string name="cancel">CANCEL</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_phone">Please enter phone</string>
    <string name="sign_up_success">Congratulation Sign Up success ! Admin will check and active you soon</string>
    <string name="update_category">Update Category</string>
    <string name="update">Update</string>
    <string name="enter_category_name">category name</string>
    <string name="select_image">Select Picture</string>
    <string name="please_enter_category_name">Please enter category name</string>
    <string name="uploading">Uploading...</string>
    <string name="uploading_done">Uploading: </string>
    <string name="update_category_success">Update category successfully</string>
    <string name="delete">Delete</string>
    <string name="delete_food">Delete Food</string>
    <string name="delete_food_message">Are you sure to delete this food</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_category_message">Are you sure to delete this category</string>
    <string name="delete_best_deals_message">Are you sure to delete this best deals</string>
    <string name="delete_best_most_popular">Are you sure to delete this most popular</string>
    <string name="enter_food_name">Food name</string>
    <string name="enter_food_price">Price</string>
    <string name="enter_food_description">Food description</string>
    <string name="please_enter_food_name">Please enter food name</string>
    <string name="please_enter_food_price">Please enter food price</string>
    <string name="update_success">Update success</string>
    <string name="delete_success">Delete success</string>
    <string name="update_food">Update food</string>
    <string name="size">Size</string>
    <string name="addon">Addon</string>
    <string name="enter_addon_size_name">Addon/Size name</string>
    <string name="enter_addon_size_price">Addon/Size price</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="action_save_addon_size">Save</string>
    <string name="cancel_save_addon_size">Do you really want close witout saving ?</string>
    <string name="ok">OK</string>
    <string name="reload_success">Reload success!</string>
    <string name="action_search">Search</string>
    <string name="menu_ordes">Orders</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="welcome">Hey</string>
    <string name="sign_out">Sign Out</string>
    <string name="message_sign_out">Do you really want to sign out?</string>
    <string name="add_category">Add New Category</string>
    <string name="action_filter">Filter</string>
    <string name="placed">Placed</string>
    <string name="shipping">Shipping</string>
    <string name="shipped">Shipped</string>
    <string name="cancelled">Cancelled</string>
    <string name="remove">Remove</string>
    <string name="call">Call</string>
    <string name="directions">Directions</string>
    <string name="delete_order">Delete order</string>
    <string name="delete_order_message">Are you sure to delete this order</string>
    <string name="delete_order_success">Order has been delete!</string>
    <string name="add_food">Add food</string>
    <string name="update_order">Update Order</string>
    <string name="update_order_status">Update Order Status</string>
    <string name="restore_placed">Restore Placed</string>
    <string name="message_check_order_number">Order Number must not br null or empty!</string>
    <string name="update_order_success">Update order successfully!</string>
    <string name="order_status">Order Status: </string>
    <string name="order_date">Order date: </string>
    <string name="name">Name: </string>
    <string name="num_of_item">Num of item: </string>
    <string name="address">Address</string>
    <string name="quantitiy">Quantity</string>
    <string name="order_details">Order Details</string>
    <string name="order_update">Your order was update</string>
    <string name="order_ship">New order need ship</string>
    <string name="new_order_ship">Your have a new order need ship to</string>
    <string name="your_order">Your order</string>
    <string name="your_order_is">Your order is</string>
    <string name="track_directions">So you can’t track directions</string>
    <string name="was_update">was update to</string>
    <string name="menu_shipper">Shippers</string>
    <string name="update_status_to">Update state to</string>
    <string name="please_select_shipper">Please selecte shipper</string>
    <string name="order_sent_to_shipper">Order has been sent to shipper</string>
    <string name="failed_send_notfi_to_shipper">Failed to send ro shipper! Order wasn’t update!</string>
    <string name="new_food">New food</string>
    <string name="new_category">New category</string>
    <string name="added_new_food">added new food</string>
    <string name="added_new_category">added new category</string>
    <string name="updated_food">made a change to the food</string>
    <string name="updated_category">made a change to the category</string>
    <string name="updated_best_deals">made a change to the best deals</string>
    <string name="updated_popular">made a change to the most popular</string>
    <string name="deleted_food">deleted the food</string>
    <string name="deleted_category">deleted the category</string>
    <string name="deleted_best_deals">deleted the best deals</string>
    <string name="deleted_popular">deleted the most popular</string>
    <string name="title_activity_tracking_order">Map</string>
    <string name="traking_order">Traking Order</string>
    <string name="order_not_found">Order not oun found</string>
    <string name="title_order">New Order</string>
    <string name="menu_best_deal">Best Deals</string>
    <string name="menu_most_popular">Most Popular</string>
    <string name="update_best_deals">Update Best Delas</string>
    <string name="delete_best_deals">Delete best deals</string>
    <string name="update_most_popular">Update Most Popular</string>
    <string name="delete_most_popular">"Delete most popular "</string>
    <string name="menu_send_new">News system</string>
    <string name="news_system">News system</string>
    <string name="news_title">Title</string>
    <string name="news_content">Content</string>
    <string name="image_send">Image send</string>
    <string name="link">Link</string>
    <string name="none">None</string>
    <string name="image">Image</string>
    <string name="send">SEND</string>
    <string name="waiting">Waiting...</string>
    <string name="news_sent">News has been sent</string>

</resources>
