<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_category">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_restaurant_menu"
            android:title="@string/menu_category" />
    </group>

    <group android:id="@+id/group_send_news">
        <item
            android:id="@+id/nav_send_new"
            android:icon="@drawable/ic_news_system"
            android:title="@string/menu_send_new" />
    </group>

    <group android:id="@+id/group_best_deal">
        <item
            android:id="@+id/nav_best_deal"
            android:icon="@drawable/ic_star_best_deal"
            android:title="@string/menu_best_deal" />
    </group>

    <group android:id="@+id/group_most_popular">
        <item
            android:id="@+id/nav_most_popular"
            android:icon="@drawable/ic_most_popular"
            android:title="@string/menu_most_popular" />
    </group>

    <group android:id="@+id/group_orders">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/menu_ordes" />
    </group>

    <group android:id="@+id/group_shippers">
        <item
            android:id="@+id/nav_shipper"
            android:icon="@drawable/ic_local_shipping"
            android:title="@string/menu_shipper" />
    </group>

    <group android:id="@+id/group_sign_out">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/menu_sign_out" />
    </group>

</menu>
