<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:padding="10dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">


        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_margin="8dp"
            android:text="@string/update_order"
            android:textColor="@color/colorButton"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/txt_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title"
            android:padding="4dp"
            android:layout_margin="10dp"
            android:text="Status: Placed"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/g_radio_shipping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_status"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="4dp">

            <RadioButton
                android:id="@+id/btn_radio_shipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:checked="true"
                android:text="@string/shipping"
                android:textSize="22sp" />

            <RadioButton
                android:id="@+id/btn_radio_cancelled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/cancelled"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="22sp" />


        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_shipper_selected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/linear_btns"
            android:layout_below="@id/g_radio_shipping"/>

        <LinearLayout
            android:id="@+id/linear_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:text="@string/cancel"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:text="@string/ok"
                android:textColor="@android:color/holo_red_dark" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>