<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:padding="10dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_news_title"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="false"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/news_title"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_news_content"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="false"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/news_content"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_below="@id/input_news_title"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/text_image_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_send"
            android:textSize="30sp"
            android:layout_below="@id/input_news_content"
            android:layout_margin="8dp"/>

        <RadioGroup
            android:id="@+id/g_news_system_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_margin="4dp"
            android:layout_below="@id/text_image_send">


            <RadioButton
                android:id="@+id/rdi_none"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/none"/>

            <RadioButton
                android:id="@+id/rdi_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/link"/>

            <RadioButton
                android:id="@+id/rdi_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/image"/>

        </RadioGroup>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_news_type_link"
            android:visibility="gone"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="false"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/link"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_below="@id/g_news_system_type"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/img_upload"
            android:layout_width="match_parent"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher_round"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_below="@id/g_news_system_type"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>