<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditSizeAddonActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_addon_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_addon_size"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/colorWhite"
            android:theme="@style/ToolbarColorBackArrow"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/input_addon_size_name"
        app:met_baseColor="@color/colorPrimary"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimary"
        app:met_singleLineEllipsis="false"
        android:padding="4dp"
        android:layout_margin="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_addon_size_name"
        android:inputType="text"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_addon_size"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/input_addon_size_price"
        app:met_baseColor="@color/colorPrimary"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimary"
        app:met_singleLineEllipsis="false"
        android:padding="4dp"
        android:layout_margin="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_addon_size_price"
        android:inputType="text"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_addon_size_name"/>

    <Button
        android:id="@+id/btn_create_addon_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textColor="@color/colorWhite"
        android:layout_margin="20dp"
        android:background="@drawable/btn_bg_create_addon_size"
        app:layout_constraintEnd_toStartOf="@id/btn_edit_addon_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_addon_size_price" />

    <Button
        android:id="@+id/btn_edit_addon_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textColor="@color/colorWhite"
        android:layout_margin="20dp"
        android:background="@drawable/btn_bg_edit_addon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_create_addon_size"
        app:layout_constraintTop_toBottomOf="@id/input_addon_size_price" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_addon_size"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_create_addon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.syd.oden.circleprogressdialog.view.RotateLoading
        android:id="@+id/progress_loading_edit_addon_size"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:loading_color="@color/colorPrimary"
        app:loading_width="6dp"
        app:shadow_offset="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/recycler_addon_size" />

</androidx.constraintlayout.widget.ConstraintLayout>